Moved configurations to appsettings

--- a/AzureFunction.BvbQuotes/AzureFunction.BvbQuotes.csproj
+++ b/AzureFunction.BvbQuotes/AzureFunction.BvbQuotes.csproj
@@ -18,6 +18,9 @@
     <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="1.1.0" />
   </ItemGroup>
   <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -28,5 +31,8 @@
   </ItemGroup>
   <ItemGroup>
     <Using Include="System.Threading.ExecutionContext" Alias="ExecutionContext" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="WebPageDownloader.cs" />
   </ItemGroup>
 </Project>
