--- a/AzureFunction.BvbQuotes/AzureFunction.BvbQuotes.csproj
+++ b/AzureFunction.BvbQuotes/AzureFunction.BvbQuotes.csproj
@@ -28,6 +28,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
+    <None Remove=".gitignore" />
   </ItemGroup>
   <ItemGroup>
     <Using Include="System.Threading.ExecutionContext" Alias="ExecutionContext" />
