--- a/.github/workflows/master_bvbquotes.yml
+++ b/.github/workflows/master_bvbquotes.yml
@@ -33,7 +33,7 @@ jobs:
         shell: pwsh
         run: |
           pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
-          dotnet build BvbQuotes/BvbQuotes.Functions.csproj --configuration Release --output ./output
+          dotnet build BvbQuotes.Functions/BvbQuotes.Functions.csproj --configuration Release --output ./output
           popd
       
       - name: Login to Azure
